[package]
name = "wikipath"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
scraper = "0.17.1"
tokio = { version = "1.29.1", features = ["full"] }
pathfinding = "4.3.0"
distance = "0.4.0"
anyhow = "1.0.98"
